# tome

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  _typos.toml  book.toml  deny.toml
.beads/: .beads-credential-key  issues.jsonl  (+2 more)
crates/skync-mcp/: Cargo.toml
crates/skync-mcp/src/: main.rs  server.rs
crates/tome/: Cargo.toml
crates/tome-desktop/: .taurignore  Cargo.toml  build.rs  tauri.conf.json
crates/tome-desktop/capabilities/: main.json
crates/tome-desktop/src/: commands.rs  error.rs  lib.rs  main.rs  menu.rs  sink.rs  sync_outcome_wire.rs  sync_state.rs  sync_types.rs  watcher.rs
crates/tome-desktop/tests/: watcher_smoke.rs
crates/tome-desktop/tests/a11y/: axe.spec.ts  playwright.config.ts
crates/tome-desktop/tests/perf/: 60fps-search.spec.ts  fps-sampler.js  playwright.config.ts  synthetic_skills.rs
crates/tome-desktop/ui/: index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
crates/tome-desktop/ui-react/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/tome-desktop/ui-react/src/: App.tsx
crates/tome-desktop/ui-solid/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/tome-desktop/ui-solid/src/: App.tsx
crates/tome-desktop/ui-svelte/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
crates/tome-desktop/ui-svelte/src/: App.svelte
crates/tome-desktop/ui/src/: App.tsx  bindings.ts  main.tsx  styles.css  test-setup.ts  tokens.css  vite-env.d.ts
crates/tome-desktop/ui/src/__mocks__/: perf-skills.json  tauri-api-core.ts  tauri-api-event.ts  tauri-plugin-clipboard.ts  tauri-plugin-opener.ts
crates/tome-desktop/ui/src/components/: Badge.module.css  Badge.tsx  Button.module.css  Button.tsx  DetailHeader.module.css  DetailHeader.tsx  DirectoryTable.module.css  DirectoryTable.tsx  FindingRow.module.css  FindingRow.tsx  KeyValueRow.module.css  KeyValueRow.tsx  MachineTomlDiff.module.css  MachineTomlDiff.tsx  MarkdownBody.module.css  MarkdownBody.tsx  Pill.module.css  Pill.tsx  PopupMenu.module.css  PopupMenu.tsx  PreviewPopover.module.css  PreviewPopover.tsx  SearchField.module.css  SearchField.tsx  SectionHeader.module.css  SectionHeader.tsx  SeverityIcon.tsx  SkillContextMenu.module.css  SkillContextMenu.tsx  SkillListRow.module.css  SkillListRow.tsx  StageRow.module.css  StageRow.tsx  StageStepper.module.css  StageStepper.tsx  StatusDot.tsx  SyncToast.module.css  SyncToast.tsx  TriageDetail.module.css  TriageDetail.tsx  (+4 more)
crates/tome-desktop/ui/src/components/__tests__/: FindingRow.test.tsx  MachineTomlDiff.test.tsx  MarkdownBody.test.tsx  PreviewPopover.test.tsx  SectionHeader.test.tsx  StageRow.test.tsx  StageStepper.test.tsx  SyncToast.test.tsx  TriageDetail.test.tsx  TriagePanel.test.tsx  TriageRow.test.tsx
crates/tome-desktop/ui/src/hooks/: useDoctorReport.ts  useFuzzySearch.ts  useLockfileDiff.ts  useMenuActions.ts  useSkillActions.ts  useSkillDetail.ts  useSkills.ts  useStatus.ts  useSync.tsx  useTauriEvent.ts
crates/tome-desktop/ui/src/hooks/__tests__/: useLockfileDiff.test.tsx  useMenuActions.test.tsx  useSync.cancel.test.tsx  useSync.outcome.test.tsx  useSync.test.tsx  useSync.triage.test.tsx
crates/tome-desktop/ui/src/lib/: ariaLabels.ts  formatDuration.ts  relativeTime.ts  textInputFocus.ts
crates/tome-desktop/ui/src/lib/__tests__/: formatDuration.test.ts
crates/tome-desktop/ui/src/shell/: ContentPane.module.css  ContentPane.tsx  Sidebar.module.css  Sidebar.tsx  Titlebar.module.css  Titlebar.tsx  Window.module.css  Window.tsx
crates/tome-desktop/ui/src/shell/__tests__/: Sidebar.test.tsx
crates/tome-desktop/ui/src/stores/: router.ts
crates/tome-desktop/ui/src/views/: HealthView.module.css  HealthView.tsx  SkillsView.module.css  SkillsView.tsx  StatusView.tsx  SyncView.module.css  SyncView.tsx
crates/tome-mcp/: Cargo.toml
crates/tome-mcp/src/: main.rs
crates/tome/src/: actions.rs  add.rs  backup.rs  change_cause.rs  cleanup.rs  cli.rs  config.rs  discover.rs  distribute.rs  doctor.rs  eject.rs  errors.rs  git.rs  install.rs  lib.rs  library.rs  lint.rs  list.rs  lockfile.rs  machine.rs  main.rs  manifest.rs  marketplace.rs  mcp.rs  migration_v010.rs  paths.rs  progress.rs  reassign.rs  reconcile.rs  relocate.rs  remove.rs  skill.rs  status.rs  summary.rs  sync_outcome.rs  tracing_init.rs  update.rs  validation.rs  wizard.rs
crates/tome/src/browse/: app.rs  fuzzy.rs  markdown.rs  mod.rs  theme.rs  ui.rs
crates/tome/src/config/: mod.rs  overrides.rs  types.rs  validate.rs
crates/tome/tests/: browse_snapshots.rs  cli.rs  cli_add.rs  cli_backup.rs  cli_browse.rs  cli_config.rs  cli_doctor.rs  cli_eject.rs  cli_init.rs  cli_lint.rs  cli_list.rs  cli_make_release.rs  cli_migrate_library.rs  cli_misc.rs  cli_overrides.rs  cli_reassign.rs  cli_remove.rs  cli_status.rs  cli_sync.rs  cli_sync_reconcile.rs  sync_cancel.rs
crates/tome/tests/common/: mod.rs
crates/tome/tests/snapshots/: browse_snapshots__snapshot_detail_pane_after_disable_toggle.snap  browse_snapshots__snapshot_detail_pane_local_skill.snap  browse_snapshots__snapshot_detail_pane_managed_skill.snap  browse_snapshots__snapshot_detail_pane_unowned_skill.snap  browse_snapshots__snapshot_help_overlay_default.snap  browse_snapshots__snapshot_skill_list_empty.snap  browse_snapshots__snapshot_skill_list_filtered.snap  browse_snapshots__snapshot_skill_list_grouped_by_source.snap  browse_snapshots__snapshot_theme_light_filtered.snap  browse_snapshots__snapshot_theme_light_skill_list.snap  cli__doctor_clean.snap  cli__list_json_empty.snap  cli__list_json_two_skills.snap  cli__list_table_two_skills.snap  cli__status_empty_library.snap  cli__sync_force_recreate.snap  cli__sync_idempotent_second_run.snap  cli__sync_initial_two_skills.snap  cli_doctor__doctor_clean.snap  cli_list__list_json_two_skills.snap  cli_list__list_table_two_skills.snap  cli_status__status_empty_library.snap  cli_status__status_unconfigured.snap  cli_sync__sync_lockfile_two_skills.snap  cli_sync__sync_updates_changed.snap
(+393 files in other folders)
