[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["Martin Pfundmair <dev@martinp7r.com>"]
repository = "https://github.com/martinP7r/tome"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
console = "0.16"
dialoguer = "0.12"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "1"
walkdir = "2"

# Async / MCP
rmcp = { version = "0.16", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }

# Dev dependencies
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "MartinP7r/homebrew-tap"
# Customize the Homebrew formula name
formula = "tome"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]

[profile.dist]
inherits = "release"
lto = "thin"
