[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.9.0"
edition = "2024"
rust-version = "1.85.0"
license = "MIT"
authors = ["Martin Pfundmair <dev@martinp7r.com>"]
repository = "https://github.com/martinP7r/tome"

[workspace.dependencies]
anyhow = "1"
# Pin arboard to a patch-version range. Bump-review policy: when bumping
# the upper bound, review CHANGELOG.md for new `arboard::Error` variants.
# The match-arms in `crates/tome/src/browse/app.rs::execute_action`
# (CopyPath arm) and `try_clipboard_set_text_with_retry` must remain
# exhaustive — a new variant unobserved is a silent UX regression because
# the fall-through `Could not copy: {other}` branch hides the semantic
# of the new error from the user. Closes #463 / POLISH-06 (D6).
arboard = { version = ">=3.6, <3.7", default-features = false, features = ["wayland-data-control"] }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
console = "0.16"
ctrlc = "3"
dialoguer = "0.12"
indicatif = "0.18"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabled = { version = "0.20", features = ["ansi"] }
terminal_size = "0.4"
toml = "1"
sha2 = "0.11"
walkdir = "2"
serde_yaml = "0.9"

# TUI
ratatui = "0.30"
crossterm = "0.29"
nucleo-matcher = "0.3"

# Dev dependencies
assert_cmd = "2"
assert_fs = "1"
predicates = "3"
insta = { version = "1", features = ["json", "filters"] }
tempfile = "3"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.30.3"
# CI backends to support
ci = "github"
# Where to host releases
hosting = "github"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
# The installers to generate for each app
installers = ["homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "MartinP7r/homebrew-tap"
# Customize the Homebrew formula name
formula = "tome"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Allow CI file modifications (e.g. Dependabot bumps) without failing the release
allow-dirty = ["ci"]

[profile.dist]
inherits = "release"
lto = "thin"
