[package]
name = "skillet-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for skillet skill distribution"

[[bin]]
name = "skillet-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
skillet = { path = "../skillet" }
