[package]
name = "tome-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "MCP server for tome skill distribution"

[[bin]]
name = "tome-mcp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
tome = { path = "../tome" }
