[package]
name = "tome"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sync AI coding skills across tools"

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
console.workspace = true
dialoguer.workspace = true
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
walkdir.workspace = true

# Only needed for `serve` subcommand
rmcp.workspace = true
tokio.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
tempfile.workspace = true
