[package]
name = "tome"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sync AI coding skills across tools"

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
ctrlc.workspace = true
dialoguer.workspace = true
dirs.workspace = true
indicatif.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
terminal_size.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
serde_yaml.workspace = true

# TUI (browse command)
ratatui.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true

# Self-reference with `test-support` enabled so integration tests in
# `tests/cli_sync_reconcile.rs` can construct `MockMarketplaceAdapter`.
# Plan 13-02 added `[features] test-support = []`; this dev-dep flips it on
# for the test target only. Production builds (`cargo build`) and library
# unit tests (`cargo test --lib`) are NOT affected.
tome = { path = ".", features = ["test-support"] }

[features]
# Expose `marketplace::testing::MockMarketplaceAdapter` to integration tests
# in `crates/tome/tests/`. Phase 13 (RECON-*) and downstream phases that
# need a synthetic MarketplaceAdapter without `claude` on PATH enable this
# feature in `[dev-dependencies]`. See OQ-2 in 13-RESEARCH.md.
test-support = []
