[package]
name = "tome"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Sync AI coding skills across tools"

[[bin]]
name = "tome"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard = { workspace = true }
clap.workspace = true
clap_complete.workspace = true
console.workspace = true
ctrlc.workspace = true
dialoguer.workspace = true
dirs.workspace = true
indicatif.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
tabled.workspace = true
terminal_size.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
serde_yaml.workspace = true
# Derive macro for the `DomainErrorKind` sentinel enum (CORE-05 / D-14). These
# typed sentinels are attached at GUI-relevant failure sites via anyhow
# `.context()` so the `tome-desktop` IPC boundary can downcast them into a
# coarse `ErrorCode` (instead of fragile message string-matching). `thiserror`
# is already a transitive dep via the specta trio; pinning it here makes the
# domain-side sentinel infra explicit. Domain stays `anyhow::Result` — these
# sentinels are attached, never returned as the error type itself.
thiserror = "2"

# TUI (browse command)
ratatui.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true

# Type-bridge for the v1.0 Tauri GUI (D-06 / D-GUI-03). Optional + behind the
# `bindings` feature so the default CLI build pulls in ZERO specta. The specta
# trio (specta / specta-typescript / tauri-specta) moves in lockstep — pinned
# with an EXACT `=` version; bump the whole trio together on upgrade (RESEARCH
# A5 / Package Legitimacy Audit: specta-rs org, crates.io-verified, pre-1.0 rc).
specta = { version = "=2.0.0-rc.25", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
insta.workspace = true
predicates.workspace = true
tempfile.workspace = true

# Self-reference with `test-support` enabled so integration tests in
# `tests/cli_sync_reconcile.rs` can construct `MockMarketplaceAdapter`.
# Plan 13-02 added `[features] test-support = []`; this dev-dep flips it on
# for the test target only. Production builds (`cargo build`) and library
# unit tests (`cargo test --lib`) are NOT affected.
tome = { path = ".", features = ["test-support"] }

[features]
# Expose `marketplace::testing::MockMarketplaceAdapter` to integration tests
# in `crates/tome/tests/`. Phase 13 (RECON-*) and downstream phases that
# need a synthetic MarketplaceAdapter without `claude` on PATH enable this
# feature in `[dev-dependencies]`. See OQ-2 in 13-RESEARCH.md.
test-support = []

# Derive `specta::Type` on every type that crosses the Tauri IPC boundary
# (D-06). The v1.0 `tome-desktop` crate path-depends on `tome` with this
# feature on. Default CLI builds leave it OFF — zero specta cost (verified by
# `cargo tree -e normal` showing no specta under default features).
bindings = ["dep:specta"]
